--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
-  color: #333;
+  background-color: #28262C;
+  color: #F9F5FF;
   padding: 40px;
 }
