--- a/style.css
+++ b/style.css
@@ -4,3 +4,43 @@ body {
   color: #F9F5FF;
   padding: 40px;
 }
+
+p {
+  font-size: 16px;
+  line-height: 126%
+}
+
+h6 {
+  font-size: 1.25rem;
+  letter-spacing: -0.5%;
+  line-height: 121%
+}
+
+h5 {
+  font-size: 1.5625rem;
+  letter-spacing: -0.75%
+  line height: 116.8%
+}
+h4 {
+  font-size: 1.95rem;
+   letter-spacing: -1.3%;
+  line-height: 13.4%;
+}
+
+h3 {
+  font-size: 2.43rem;
+  letter-spacing: -1.5%;
+  line-height: 110.7%;
+}
+
+h2 {
+  font-size: 3rem;
+  letter-spacing: -1.75%;
+  line-height: 108.6%
+}
+
+h1 {
+  font-size: 3.75rem;
+  line-spacing: -2%;
+  line-height: 100%
+  }
