--- a/style.css
+++ b/style.css
@@ -2,9 +2,8 @@ body {
   font-family: Arial, sans-serif;
   background-color: #28262C;
   color: #F9F5FF;
-  padding: 40px;
 }
-
+  
 p {
   font-size: 16px;
   line-height: 126%
@@ -44,3 +43,31 @@ h1 {
   line-spacing: -2%;
   line-height: 100%
   }
+
+nav {
+  background-color: #242424;
+}
+
+nav > ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 15px;
+}
+
+nav > ul > li {
+  display: inline;
+}
+
+nav > ul > li > a {
+  color: white;
+  text-decoration: none;
+  padding: 8px 12px;
+}
+
+nav > ul > li > a:hover {
+  background-color: #555;
+  border-radius: 4px;
+}
+
